--- a/index.html
+++ b/index.html
@@ -48,7 +48,67 @@
         </div>
       </div>
 
-      <div id="content"></div>
+      <div id="content">
+        <!-- About section -->
+        <div class="content-section">
+          <h2 class="section-heading">THE BAND</h2>
+          <p class="section-sub-heading">we love music</p>
+          <p class="about-text">
+            We have created a fictional band website. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+          </p>
+          <div class="menbers-list">
+
+            <div class="menbers-item">
+              <p class="menbers-name">Name</p>
+              <img src="assets/img/slider1/bandmember.jpg" alt="" class="menbers-img">
+            </div>
+
+          <div class="menbers-item">
+            <p class="menbers-name">Name</p>
+            <img src="assets/img/slider1/bandmember.jpg" alt="" class="menbers-img">
+          </div>
+      
+
+        <div class="menbers-item">
+          <p class="menbers-name">Name</p>
+          <img src="assets/img/slider1/bandmember.jpg" alt="" class="menbers-img">
+        </div>
+        <div class="clear"></div>
+      </div>
+        </div>
+
+        <!-- Tour section -->
+         <div class="tour-section">
+          <div class="content-section">
+            <h2 class="section-heading text-white">TOUR DATE</h2>
+            <p class="section-sub-heading text-white">Remember to book your tickets!</p>
+            <ul class="ticket-list">
+              <li>September <spam class="Sold-out">Sold out</spam></li>
+              <li>October  <spam class="Sold-out">Sold out</spam></li>
+              <li>November <spam class="quantity">3</spam></li>
+            </ul>
+              <!-- Place -->
+               <div class="place-list">
+                <div class="place-item">
+                  <div class="place"><img src="assets/img/slider1/newyork.jpg" alt="New York">
+                    <div class="place-body">
+                      <h3 class="place-heading">New York</h3>
+                      <p class="place-time">Fri 27 Nov 2016</p>
+                      <p class="place desc">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
+                      <a href="#" class="place-buy-btn">Buy Tikets</a>
+                    </div>
+                  </div>
+                </div>
+               </div>
+          
+          </div>
+         </div>
+
+        <!-- Contact section -->
+        <div class="content-section">
+          <h2 class="section-heading">CONTACT</h2>
+          <p class="section-sub-heading">Fan? Drop a note!</p>
+        </div>
 
       <div id="footer"></div>
     </div>
