--- a/index.html
+++ b/index.html
@@ -54,55 +54,112 @@
           <h2 class="section-heading">THE BAND</h2>
           <p class="section-sub-heading">we love music</p>
           <p class="about-text">
-            We have created a fictional band website. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+            We have created a fictional band website. Lorem ipsum dolor sit
+            amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+            ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+            nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+            consequat. Duis aute irure dolor in reprehenderit in voluptate velit
+            esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+            cupidatat non proident, sunt in culpa qui officia deserunt mollit
+            anim id est laborum consectetur adipiscing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+            veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+            ea commodo consequat.
           </p>
           <div class="menbers-list">
+            <div class="menbers-item">
+              <p class="menbers-name">Name</p>
+              <img
+                src="assets/img/slider1/bandmember.jpg"
+                alt=""
+                class="menbers-img"
+              />
+            </div>
 
             <div class="menbers-item">
               <p class="menbers-name">Name</p>
-              <img src="assets/img/slider1/bandmember.jpg" alt="" class="menbers-img">
+              <img
+                src="assets/img/slider1/bandmember.jpg"
+                alt=""
+                class="menbers-img"
+              />
             </div>
 
-          <div class="menbers-item">
-            <p class="menbers-name">Name</p>
-            <img src="assets/img/slider1/bandmember.jpg" alt="" class="menbers-img">
+            <div class="menbers-item">
+              <p class="menbers-name">Name</p>
+              <img
+                src="assets/img/slider1/bandmember.jpg"
+                alt=""
+                class="menbers-img"
+              />
+            </div>
+            <div class="clear"></div>
           </div>
-      
-
-        <div class="menbers-item">
-          <p class="menbers-name">Name</p>
-          <img src="assets/img/slider1/bandmember.jpg" alt="" class="menbers-img">
-        </div>
-        <div class="clear"></div>
-      </div>
         </div>
 
         <!-- Tour section -->
-         <div class="tour-section">
+        <div class="tour-section">
           <div class="content-section">
             <h2 class="section-heading text-white">TOUR DATE</h2>
-            <p class="section-sub-heading text-white">Remember to book your tickets!</p>
+            <p class="section-sub-heading text-white">
+              Remember to book your tickets!
+            </p>
             <ul class="ticket-list">
-              <li>September <spam class="Sold-out">Sold out</spam></li>
-              <li>October  <spam class="Sold-out">Sold out</spam></li>
-              <li>November <spam class="quantity">3</spam></li>
+              <li>September <span class="Sold-out">Sold out</span></li>
+              <li>October <span class="Sold-out">Sold out</span></li>
+              <li>November <span class="quantity">3</span></li>
             </ul>
-              <!-- Place -->
-               <div class="place-list">
-                <div class="place-item">
-                  <div class="place"><img src="assets/img/slider1/newyork.jpg" alt="New York">
-                    <div class="place-body">
-                      <h3 class="place-heading">New York</h3>
-                      <p class="place-time">Fri 27 Nov 2016</p>
-                      <p class="place desc">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-                      <a href="#" class="place-buy-btn">Buy Tikets</a>
-                    </div>
-                  </div>
+            <!-- Place -->
+            <div class="place-list">
+              <div class="place-item">
+                <img
+                  src="assets/img/slider1/newyork.jpg"
+                  alt="New York"
+                  class="place-img"
+                />
+                <div class="place-body">
+                  <h3 class="place-heading">New York</h3>
+                  <p class="place-time">Fri 27 Nov 2016</p>
+                  <p class="place desc">
+                    Praesent tincidunt sed tellus ut rutrum sed vitae justo.
+                  </p>
+                  <a href="#" class="place-buy-btn">Buy Tickets</a>
                 </div>
-               </div>
-          
+              </div>
+              <div class="place-item">
+                <img
+                  src="assets/img/slider1/paris.jpg"
+                  alt="Paris"
+                  class="place-img"
+                />
+                <div class="place-body">
+                  <h3 class="place-heading">Paris</h3>
+                  <p class="place-time">Sat 28 Nov 2016</p>
+                  <p class="place desc">
+                    Praesent tincidunt sed tellus ut rutrum sed vitae justo.
+                  </p>
+                  <a href="#" class="place-buy-btn">Buy Tickets</a>
+                </div>
+              </div>
+              <div class="place-item">
+                <img
+                  src="assets/img/slider1/sanfran.jpg"
+                  alt="San Francisco"
+                  class="place-img"
+                />
+                <div class="place-body">
+                  <h3 class="place-heading">San Francisco</h3>
+                  <p class="place-time">Fri 27 Nov 2016</p>
+                  <p class="place desc">
+                    Praesent tincidunt sed tellus ut rutrum sed vitae justo.
+                  </p>
+                  <a href="#" class="place-buy-btn">Buy Tickets</a>
+                </div>
+              </div>
+              <div class="clear"></div>
+            </div>
           </div>
-         </div>
+        </div>
 
         <!-- Contact section -->
         <div class="content-section">
@@ -110,7 +167,8 @@
           <p class="section-sub-heading">Fan? Drop a note!</p>
         </div>
 
-      <div id="footer"></div>
+        <div id="footer"></div>
+      </div>
     </div>
   </body>
 </html>
