--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>The band</title>
+    <link rel="icon" href="/favicon/site.webmanifest" type="image/x-icon" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <link
       rel="stylesheet"
@@ -16,19 +17,19 @@
       <div id="header">
         <!-- Begin nav -->
         <ul id="nav">
-          <li><a href="">Home</a></li>
-          <li><a href="">Band</a></li>
-          <li><a href="">Tour</a></li>
-          <li><a href="">Contact</a></li>
+          <li><a href="#">Home</a></li>
+          <li><a href="#band">Band</a></li>
+          <li><a href="#tour">Tour</a></li>
+          <li><a href="#contact">Contact</a></li>
           <li>
             <a href="">
               More
               <i class="nav-arrow-down ti-angle-down"></i>
             </a>
             <ul class="subnav">
-              <li><a href="">Merchandise</a></li>
-              <li><a href="">Extras</a></li>
-              <li><a href="">Media</a></li>
+              <li><a href="#">Merchandise</a></li>
+              <li><a href="#">Extras</a></li>
+              <li><a href="#">Media</a></li>
             </ul>
           </li>
         </ul>
@@ -39,6 +40,7 @@
         </div>
         <!-- End search button -->
       </div>
+
       <div id="slider">
         <div class="text-content">
           <h2 class="text-heading">New York</h2>
@@ -50,7 +52,7 @@
 
       <div id="content">
         <!-- About section -->
-        <div class="content-section">
+        <div id="band" class="content-section">
           <h2 class="section-heading">THE BAND</h2>
           <p class="section-sub-heading">we love music</p>
           <p class="about-text">
@@ -66,39 +68,36 @@
             veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
             ea commodo consequat.
           </p>
-          <div class="menbers-list">
-            <div class="menbers-item">
+          <div class="row menbers-list">
+            <div class="col col-third text-center">
               <p class="menbers-name">Name</p>
               <img
                 src="assets/img/slider1/bandmember.jpg"
-                alt=""
+                alt="Name"
                 class="menbers-img"
               />
             </div>
-
-            <div class="menbers-item">
+            <div class="col col-third text-center">
               <p class="menbers-name">Name</p>
               <img
                 src="assets/img/slider1/bandmember.jpg"
-                alt=""
+                alt="Name"
                 class="menbers-img"
               />
             </div>
-
-            <div class="menbers-item">
+            <div class="col col-third text-center">
               <p class="menbers-name">Name</p>
               <img
                 src="assets/img/slider1/bandmember.jpg"
-                alt=""
+                alt="Name"
                 class="menbers-img"
               />
             </div>
-            <div class="clear"></div>
           </div>
         </div>
 
         <!-- Tour section -->
-        <div class="tour-section">
+        <div id="tour" class="tour-section">
           <div class="content-section">
             <h2 class="section-heading text-white">TOUR DATE</h2>
             <p class="section-sub-heading text-white">
@@ -109,9 +108,8 @@
               <li>October <span class="Sold-out">Sold out</span></li>
               <li>November <span class="quantity">3</span></li>
             </ul>
-            <!-- Place -->
-            <div class="place-list">
-              <div class="place-item">
+            <div class="row place-list">
+              <div class="col col-third">
                 <img
                   src="assets/img/slider1/newyork.jpg"
                   alt="New York"
@@ -120,13 +118,15 @@
                 <div class="place-body">
                   <h3 class="place-heading">New York</h3>
                   <p class="place-time">Fri 27 Nov 2016</p>
-                  <p class="place desc">
+                  <p class="place-desc">
                     Praesent tincidunt sed tellus ut rutrum sed vitae justo.
                   </p>
-                  <a href="#" class="place-buy-btn">Buy Tickets</a>
+                  <button class="btn js-buy-ticket">
+                    Buy Tickets
+                  </button>
                 </div>
               </div>
-              <div class="place-item">
+              <div class="col col-third">
                 <img
                   src="assets/img/slider1/paris.jpg"
                   alt="Paris"
@@ -135,13 +135,15 @@
                 <div class="place-body">
                   <h3 class="place-heading">Paris</h3>
                   <p class="place-time">Sat 28 Nov 2016</p>
-                  <p class="place desc">
+                  <p class="place-desc">
                     Praesent tincidunt sed tellus ut rutrum sed vitae justo.
                   </p>
-                  <a href="#" class="place-buy-btn">Buy Tickets</a>
+                  <button class="btn js-buy-ticket">
+                    Buy Tickets
+                  </button>
                 </div>
               </div>
-              <div class="place-item">
+              <div class="col col-third">
                 <img
                   src="assets/img/slider1/sanfran.jpg"
                   alt="San Francisco"
@@ -150,25 +152,153 @@
                 <div class="place-body">
                   <h3 class="place-heading">San Francisco</h3>
                   <p class="place-time">Fri 27 Nov 2016</p>
-                  <p class="place desc">
+                  <p class="place-desc">
                     Praesent tincidunt sed tellus ut rutrum sed vitae justo.
                   </p>
-                  <a href="#" class="place-buy-btn">Buy Tickets</a>
+                  <button class="btn js-buy-ticket">
+                    Buy Tickets
+                  </button>
                 </div>
               </div>
-              <div class="clear"></div>
             </div>
           </div>
         </div>
 
-        <!-- Contact section -->
-        <div class="content-section">
+        <!--Begin : Contact section -->
+        <div id="contact" class="content-section">
           <h2 class="section-heading">CONTACT</h2>
           <p class="section-sub-heading">Fan? Drop a note!</p>
-        </div>
 
-        <div id="footer"></div>
+          <div class="row contact-content">
+            <div class="col col-half contact-info">
+              <p><i class="ti-location-pin"></i>Chicago, US</p>
+              <p><i class="ti-mobile"></i>Phone: +00 151515</p>
+              <p><i class="ti-email"></i>Email: mail@mail.com</p>
+            </div>
+            <div class="col col-half contact-form">
+              <form action="">
+                <div class="row">
+                  <div class="col col-half">
+                    <input
+                      type="text"
+                      name=""
+                      placeholder="Name" required
+                      id=""
+                      class="form-control"
+                    />
+                  </div>
+                  <div class="col col-half">
+                    <input
+                      type="email"
+                      name=""
+                      placeholder="Email" required
+                      id=""
+                      class="form-control"
+                    />
+                  </div>
+                </div>
+                <div class="row mt-8">
+                  <div class="col col-full">
+                    <input
+                      type="text"
+                      name=""
+                      placeholder="Message" required
+                      id=""
+                      class="form-control"
+                    />
+                  </div>
+                </div>
+                <input class="btn pull-right mt-16" type="submit" value="SEND" />
+              </form>
+            </div>
+          </div>
+        </div>
+        <!--End : Contact section -->
+
+        <div class="map-section">
+          <img src="assets/img/slider1/map.jpg" alt="Map">
+        </div>
+      </div>
+
+      <div class="modal js-modal">
+        <div class="modal-container js-modal-container">
+          <div class="modal-close js-modal-close">
+            <i class="ti-close"></i>
+          </div>
+
+          <header class="modal-header">
+            <i class="modal-heading-icon ti-bag"></i>
+            Tickets
+          </header>
+
+          <div class="modal-body">
+            <label for="ticket-quantity" class="modal-label">
+              <i class="ti-shopping-cart"></i>
+              Tickets, $15 per person
+            </label>
+            <input
+              id="ticket-quantity"
+              type="text"
+              class="modal-input"
+              placeholder="How many?"
+            />
+
+            <label for="ticket-email" class="modal-label">
+              <i class="ti-user"></i>
+              Send to
+            </label>
+            <input
+              id="ticket-email"
+              type="email"
+              class="modal-input"
+              placeholder="Enter email..."
+            />
+            <button id="buy-tickets">Pay <i class="ti-check"></i></button>
+          </div>
+          <footer class="modal-footer">
+            <p class="modal-help">Need <a href="">help?</a></p>
+          </footer>
+        </div>
+      </div>
+
+      <div class="footer">
+        <div class="socical-list">
+          <a href=""><i class="ti-facebook"></i></a>
+          <a href=""><i class="ti-instagram"></i></a>
+          <a href=""><i class="ti-youtube"></i></a>
+          <a href=""><i class="ti-pinterest"></i></a>
+          <a href=""><i class="ti-twitter-alt"></i></a>
+          <a href=""><i class="ti-linkedin"></i></a>
+        </div>
+        <p class="copyright">Powered by <a href="">w3.css</a></p>
       </div>
     </div>
+
+    <script>
+      const buyBtns = document.querySelectorAll(".js-buy-ticket");
+      const modal = document.querySelector(".js-modal");
+      const modalClose = document.querySelector(".js-modal-close");
+      const modalContainer = document.querySelector(".js-modal-container");
+      // Hàm hiển thị modal mua vé (Thêm class open vào modal)
+      function showbuyticket() {
+        modal.classList.add("open");
+      }
+      // Hàm ẩn modal mua vé (Gỡ bỏ class open của modal)
+      function hidebuyticket() {
+        modal.classList.remove("open");
+      }
+      // Lặp qua từng thẻ open và nghe hành vi click
+      for (const buyBtn of buyBtns) {
+        buyBtn.addEventListener("click", showbuyticket);
+      }
+      // Nghe hành vi click vào button close
+      modalClose.addEventListener("click", hidebuyticket);
+
+      modal.addEventListener("click", hidebuyticket);
+
+      modalContainer.addEventListener("click", function (event) {
+        event.stopPropagation();
+      });
+    </script>
   </body>
 </html>
